--- a/json/js/index.html
+++ b/json/js/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON and AJAX</title>
-    <link rel="stylesheet" href="..json/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
     <div class="test">Something here!</div>
 
     <div id="animal-info"></div>
-    <script src=".js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
